Added usergroup admin which has the right to add users. Created interface for the user adding feature

--- a/README
+++ b/README
@@ -1,4 +1,11 @@
-TFU
-===
+	TFU	-	Tek File Upload
+===================================================
+A Script for managing and uploading files, written in PHP.
 
-A Script for managing and uploading files written in php
+Setup:
+
+1. Create a folder outside the web directory
+2. Move info.php and users.dat to that directory
+3. Edit the information in info.php to match your configuration
+4. Create the folder in which the files are saved
+5. You should now be ready to go, if the script doesn't work, check the file folders rights
