--- a/README
+++ b/README
@@ -16,4 +16,4 @@ In the upload folder, if user spesific folders are enabled, the script must also
 
 
 
-Please note that bootstarp.css is licensed under http://www.apache.org/licenses/LICENSE-2.0
+Please note that bootstrap.css is licensed under http://www.apache.org/licenses/LICENSE-2.0
